<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_add_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseUI.CourseAddPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1sp"
        android:layout_marginTop="1sp"
        android:layout_marginEnd="1sp"
        android:layout_marginBottom="1sp"
        android:background="@color/lightGreyBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/course_add_page_course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_label_title_hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_startDate"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/course_add_page_course_startDate"
                    android:layout_width="175sp"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_date_hint"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:background="@drawable/textview_border"
                    android:layout_gravity="center"
                    android:padding="10sp"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_endDate"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/course_add_page_course_endDate"
                    android:layout_width="175sp"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_date_hint"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:background="@drawable/textview_border"
                    android:layout_gravity="center"
                    android:padding="10sp"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_status"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/course_add_page_course_status"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_instructor_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/course_add_page_course_instructor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:autofillHints="Enter Instructors name"
                    android:hint="@string/course_add_label_instructor_name_hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_instructor_number"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/course_add_page_course_instructor_number"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:maxLength="10"
                    android:hint="@string/course_add_label_instructor_number_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_add_label_instructor_email"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/course_add_page_course_instructor_email"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_label_instructor_email_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/course_optional_note_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/course_add_page_optional_note"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_label_optional_note" />
            </LinearLayout>

            <Button
                android:id="@+id/button_add_assessments"
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:text="@string/click_to_add_assessments" />

            <TextView
                android:id="@+id/assessments_to_be_added_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_assessments_to_be_added"
                app:layout_constraintTop_toBottomOf="@+id/button_add_assessments"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/repeat_assessments_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_assessments_will_be_discarded"
                app:layout_constraintTop_toBottomOf="@+id/assessments_to_be_added_textView"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/course_add_page_add_assessmentsToBeAdded_recyclerView"
                android:layout_width="400dp"
                android:layout_height="125sp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="right"
                app:layout_constraintTop_toBottomOf="@+id/repeat_assessments_text"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />

            <TextView
                android:id="@+id/associated_assessments_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/course_associated_assessments"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/course_add_page_associated_assessments_recyclerView"
                android:layout_width="409dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/associated_assessments_textView"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>