<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_add_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.TermUI.TermsAddPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1sp"
        android:layout_marginTop="1sp"
        android:layout_marginEnd="1sp"
        android:layout_marginBottom="1sp"
        android:background="@color/lightGreyBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/terms_add_label_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/terms_add_page_title"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:hint="@string/terms_add_label_title_hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/terms_add_label_startDate"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/terms_add_page_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_date_hint"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:background="@drawable/textview_border"
                    android:layout_gravity="center"
                    android:padding="10sp"
                    tools:visibility="visible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/terms_add_label_endDate"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/terms_add_page_endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:hint="@string/course_add_date_hint"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:background="@drawable/textview_border"
                    android:layout_gravity="center"
                    android:padding="10sp"
                    tools:visibility="visible"/>
            </LinearLayout>

            <TextView
                android:id="@+id/add_courses_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_add_course"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/term_add_page_add_courses_listView"
                android:layout_width="400dp"
                android:layout_height="125sp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="right"
                app:layout_constraintTop_toBottomOf="@+id/add_courses_textView"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />
            <Button
                android:id="@+id/button_ok"
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:text="@string/click_to_add_course" />

            <TextView
                android:id="@+id/courses_to_be_added_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_coursed_to_be_added"
                app:layout_constraintTop_toBottomOf="@+id/button_ok"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/repeat_courses_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_course_will_be_discarded"
                app:layout_constraintTop_toBottomOf="@+id/courses_to_be_added_textView"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/term_add_page_add_coursesToBeAdded_recyclerView"
                android:layout_width="400dp"
                android:layout_height="125sp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="right"
                app:layout_constraintTop_toBottomOf="@+id/repeat_courses_text"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />

            <TextView
                android:id="@+id/associated_courses_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_associated_course"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/term_add_page_associated_courses_recyclerView"
                android:layout_width="409dp"
                android:layout_height="200dp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="right"
                app:layout_constraintTop_toBottomOf="@+id/associated_courses_textView"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp" />

           <!-- <Button
                android:id="@+id/button_remove"
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:text="@string/click_to_remove_course" />-->
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>